2008-03-06  Lassi A. Tuura  <lat@iki.fi>

	* Re-implement the handling of internal profiling buffers to
	reduce memory consumption for memory-heavy applications.
	Not entirely functional yet.
	* IgProfBuffer.h, IgProfBuffer.cc: New buffer core.
	* IgProfSymCache.h, IgProfSymCache.cc: Separate symbol caches.
	* IgProfTrace.h, IgProfTrace.cc: Simplify, just grow the buffer
	piece-meal as more data is added.  Remove ability to relocate the
	buffer and to do symbol mappings; we do the latter at the end.
	* IgProfMem.cc, IgProfFileDesc.cc, IgProfPerf.cc: Adjust.
	* IgProf.h, IgProf.cc: Adjust.  Provide separate global and
	per-thread enabled/disabled states.
	* IgProfPool.h, IgProfPool.cc: Removed.

2007-11-27  Lassi A. Tuura  <lat@iki.fi>

	* igprof-analyse: Resolve pure file names against $PATH.  This
	usually just the binary names, and it is better to attempt the
	path search than not to find the file at all for symbol check.

	* IgProfPerf.cc: Hook 'sigaction' and prevent profiler signal from
	being overridden.  Improve the logic and add a warning if there is
	an attempt to block the profiler signal.

2007-11-27  Lassi A. Tuura  <lat@iki.fi>

	* IgProf.cc: Use "s_activated", not "s_initialized" to protect
	against use of the profiler when it is unsafe to do so.  Avoids
	crash risk at exit time if the application abandons threads.

2007-11-21  Peter Elmer <Peter.Elmer@cern.ch> 

        * Updates to build with CMSSW.  Following the old patch for this,
	  but updating "Ig_Tools" to "IgTools".
        * Add .admin/developers files.

2007-11-14  Peter Elmer <Peter.Elmer@cern.ch>

        * Modify includes and BuildFiles to refer to "IgTools" rather than
	"Ig_Tools".

2007-11-13  Peter Elmer <Peter.Elmer@cern.ch>

        * Migrate Ig_Tools/{IgHook,IgTrace,IgProf} into the CMSSW CVS
	repository from the IGNOMINY repo, changing the subsystem name to
	"IgTools" to conform to the CMSSW conventions. The initial import